# antidote-mqtt

./: configure.in
apps/: sample_agent.c  sample_agent_common.c  sample_manager.c
mqtt_example/: agent  agent.c  main  manager.c
src/: Makefile.am
src/communication/: communication.c
src/communication/plugin/: .plugin_tcp_agent.c.swp  Makefile.am  plugin_mqtt.c  plugin_mqtt.h  plugin_mqtt_agent.c  plugin_mqtt_agent.h
